# minijam16

./: CMakeLists.txt  README.md
src/: assets.cpp  assets.h  main.cpp  thevaker2.cpp  thevaker2.h
src/core/: constants.h  entity.cpp  entity.h
src/screens/: endscreen.cpp  endscreen.h  gameplayscreen.cpp  gameplayscreen.h  menuscreen.cpp  menuscreen.h
